syntax = "proto3";

option csharp_namespace = "Inventory.Grpc.Protos";

service StockProtoService {
  rpc GetStock (GetStockRequest) returns (StockModel);
}

message GetStockRequest {
  int64 productId = 1;
}

message StockModel {
  int32 quantity = 1;
}
